ENSAK/src/generated/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     program -> nl statement_list
Rule 3     statement_list -> statement
Rule 4     statement_list -> statement nl
Rule 5     statement_list -> statement nl statement_list
Rule 6     statement -> if_stmt
Rule 7     statement -> for_stmt
Rule 8     statement -> foreach_stmt
Rule 9     statement -> while_stmt
Rule 10    statement -> until_stmt
Rule 11    statement -> expression_stmt
Rule 12    if_stmt -> IF expression block
Rule 13    if_stmt -> IF expression block ELSE block
Rule 14    if_stmt -> IF expression block ELSE if_stmt
Rule 15    for_stmt -> FOR expression , expression , expression block
Rule 16    foreach_stmt -> id [ nl statement_list ]
Rule 17    while_stmt -> WHILE expression block
Rule 18    until_stmt -> UNTIL expression block
Rule 19    expression_stmt -> expression
Rule 20    block -> { nl statement_list }
Rule 21    nl -> NEWLINE
Rule 22    nl -> nl NEWLINE
Rule 23    expression -> expression OP_UNARY
Rule 24    expression -> ! expression
Rule 25    expression -> expression OP_MUL expression
Rule 26    expression -> expression OP_ADD expression
Rule 27    expression -> expression OP_RELA expression
Rule 28    expression -> expression OP_COMP expression
Rule 29    expression -> expression AND_LOGIC expression
Rule 30    expression -> expression OR_LOGIC expression
Rule 31    expression -> expression OP_ASSIGN expression
Rule 32    expression -> ( expression )
Rule 33    expression -> NUMBER
Rule 34    expression -> TRUE
Rule 35    expression -> FALSE
Rule 36    expression -> id
Rule 37    expression -> call
Rule 38    id -> IDENTIFIER
Rule 39    id -> IDENTIFIER . id
Rule 40    call -> id ( )
Rule 41    call -> id ( parameters )
Rule 42    parameters -> expression
Rule 43    parameters -> expression , parameters

Terminals, with rules where they appear

!                    : 24
(                    : 32 40 41
)                    : 32 40 41
,                    : 15 15 43
.                    : 39
AND_LOGIC            : 29
ELSE                 : 13 14
FALSE                : 35
FOR                  : 15
IDENTIFIER           : 38 39
IF                   : 12 13 14
NEWLINE              : 21 22
NUMBER               : 33
OP_ADD               : 26
OP_ASSIGN            : 31
OP_COMP              : 28
OP_MUL               : 25
OP_RELA              : 27
OP_UNARY             : 23
OR_LOGIC             : 30
TRUE                 : 34
UNTIL                : 18
WHILE                : 17
[                    : 16
]                    : 16
error                : 
{                    : 20
}                    : 20

Nonterminals, with rules where they appear

block                : 12 13 13 14 15 17 18
call                 : 37
expression           : 12 13 14 15 15 15 17 18 19 23 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 42 43
expression_stmt      : 11
for_stmt             : 7
foreach_stmt         : 8
id                   : 16 36 39 40 41
if_stmt              : 6 14
nl                   : 2 4 5 16 20 22
parameters           : 41 43
program              : 0
statement            : 3 4 5
statement_list       : 1 2 5 16 20
until_stmt           : 10
while_stmt           : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) program -> . nl statement_list
    (3) statement_list -> . statement
    (4) statement_list -> . statement nl
    (5) statement_list -> . statement nl statement_list
    (21) nl -> . NEWLINE
    (22) nl -> . nl NEWLINE
    (6) statement -> . if_stmt
    (7) statement -> . for_stmt
    (8) statement -> . foreach_stmt
    (9) statement -> . while_stmt
    (10) statement -> . until_stmt
    (11) statement -> . expression_stmt
    (12) if_stmt -> . IF expression block
    (13) if_stmt -> . IF expression block ELSE block
    (14) if_stmt -> . IF expression block ELSE if_stmt
    (15) for_stmt -> . FOR expression , expression , expression block
    (16) foreach_stmt -> . id [ nl statement_list ]
    (17) while_stmt -> . WHILE expression block
    (18) until_stmt -> . UNTIL expression block
    (19) expression_stmt -> . expression
    (38) id -> . IDENTIFIER
    (39) id -> . IDENTIFIER . id
    (23) expression -> . expression OP_UNARY
    (24) expression -> . ! expression
    (25) expression -> . expression OP_MUL expression
    (26) expression -> . expression OP_ADD expression
    (27) expression -> . expression OP_RELA expression
    (28) expression -> . expression OP_COMP expression
    (29) expression -> . expression AND_LOGIC expression
    (30) expression -> . expression OR_LOGIC expression
    (31) expression -> . expression OP_ASSIGN expression
    (32) expression -> . ( expression )
    (33) expression -> . NUMBER
    (34) expression -> . TRUE
    (35) expression -> . FALSE
    (36) expression -> . id
    (37) expression -> . call
    (40) call -> . id ( )
    (41) call -> . id ( parameters )

    NEWLINE         shift and go to state 5
    IF              shift and go to state 12
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    UNTIL           shift and go to state 17
    IDENTIFIER      shift and go to state 18
    !               shift and go to state 19
    (               shift and go to state 20
    NUMBER          shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    nl                             shift and go to state 3
    statement                      shift and go to state 4
    if_stmt                        shift and go to state 6
    for_stmt                       shift and go to state 7
    foreach_stmt                   shift and go to state 8
    while_stmt                     shift and go to state 9
    until_stmt                     shift and go to state 10
    expression_stmt                shift and go to state 11
    expression                     shift and go to state 13
    id                             shift and go to state 15
    call                           shift and go to state 24

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .

    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (2) program -> nl . statement_list
    (22) nl -> nl . NEWLINE
    (3) statement_list -> . statement
    (4) statement_list -> . statement nl
    (5) statement_list -> . statement nl statement_list
    (6) statement -> . if_stmt
    (7) statement -> . for_stmt
    (8) statement -> . foreach_stmt
    (9) statement -> . while_stmt
    (10) statement -> . until_stmt
    (11) statement -> . expression_stmt
    (12) if_stmt -> . IF expression block
    (13) if_stmt -> . IF expression block ELSE block
    (14) if_stmt -> . IF expression block ELSE if_stmt
    (15) for_stmt -> . FOR expression , expression , expression block
    (16) foreach_stmt -> . id [ nl statement_list ]
    (17) while_stmt -> . WHILE expression block
    (18) until_stmt -> . UNTIL expression block
    (19) expression_stmt -> . expression
    (38) id -> . IDENTIFIER
    (39) id -> . IDENTIFIER . id
    (23) expression -> . expression OP_UNARY
    (24) expression -> . ! expression
    (25) expression -> . expression OP_MUL expression
    (26) expression -> . expression OP_ADD expression
    (27) expression -> . expression OP_RELA expression
    (28) expression -> . expression OP_COMP expression
    (29) expression -> . expression AND_LOGIC expression
    (30) expression -> . expression OR_LOGIC expression
    (31) expression -> . expression OP_ASSIGN expression
    (32) expression -> . ( expression )
    (33) expression -> . NUMBER
    (34) expression -> . TRUE
    (35) expression -> . FALSE
    (36) expression -> . id
    (37) expression -> . call
    (40) call -> . id ( )
    (41) call -> . id ( parameters )

    NEWLINE         shift and go to state 26
    IF              shift and go to state 12
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    UNTIL           shift and go to state 17
    IDENTIFIER      shift and go to state 18
    !               shift and go to state 19
    (               shift and go to state 20
    NUMBER          shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    statement_list                 shift and go to state 25
    statement                      shift and go to state 4
    if_stmt                        shift and go to state 6
    for_stmt                       shift and go to state 7
    foreach_stmt                   shift and go to state 8
    while_stmt                     shift and go to state 9
    until_stmt                     shift and go to state 10
    expression_stmt                shift and go to state 11
    expression                     shift and go to state 13
    id                             shift and go to state 15
    call                           shift and go to state 24

state 4

    (3) statement_list -> statement .
    (4) statement_list -> statement . nl
    (5) statement_list -> statement . nl statement_list
    (21) nl -> . NEWLINE
    (22) nl -> . nl NEWLINE

    $end            reduce using rule 3 (statement_list -> statement .)
    ]               reduce using rule 3 (statement_list -> statement .)
    }               reduce using rule 3 (statement_list -> statement .)
    NEWLINE         shift and go to state 5

    nl                             shift and go to state 27

state 5

    (21) nl -> NEWLINE .

    NEWLINE         reduce using rule 21 (nl -> NEWLINE .)
    IF              reduce using rule 21 (nl -> NEWLINE .)
    FOR             reduce using rule 21 (nl -> NEWLINE .)
    WHILE           reduce using rule 21 (nl -> NEWLINE .)
    UNTIL           reduce using rule 21 (nl -> NEWLINE .)
    IDENTIFIER      reduce using rule 21 (nl -> NEWLINE .)
    !               reduce using rule 21 (nl -> NEWLINE .)
    (               reduce using rule 21 (nl -> NEWLINE .)
    NUMBER          reduce using rule 21 (nl -> NEWLINE .)
    TRUE            reduce using rule 21 (nl -> NEWLINE .)
    FALSE           reduce using rule 21 (nl -> NEWLINE .)
    $end            reduce using rule 21 (nl -> NEWLINE .)
    ]               reduce using rule 21 (nl -> NEWLINE .)
    }               reduce using rule 21 (nl -> NEWLINE .)


state 6

    (6) statement -> if_stmt .

    NEWLINE         reduce using rule 6 (statement -> if_stmt .)
    $end            reduce using rule 6 (statement -> if_stmt .)
    ]               reduce using rule 6 (statement -> if_stmt .)
    }               reduce using rule 6 (statement -> if_stmt .)


state 7

    (7) statement -> for_stmt .

    NEWLINE         reduce using rule 7 (statement -> for_stmt .)
    $end            reduce using rule 7 (statement -> for_stmt .)
    ]               reduce using rule 7 (statement -> for_stmt .)
    }               reduce using rule 7 (statement -> for_stmt .)


state 8

    (8) statement -> foreach_stmt .

    NEWLINE         reduce using rule 8 (statement -> foreach_stmt .)
    $end            reduce using rule 8 (statement -> foreach_stmt .)
    ]               reduce using rule 8 (statement -> foreach_stmt .)
    }               reduce using rule 8 (statement -> foreach_stmt .)


state 9

    (9) statement -> while_stmt .

    NEWLINE         reduce using rule 9 (statement -> while_stmt .)
    $end            reduce using rule 9 (statement -> while_stmt .)
    ]               reduce using rule 9 (statement -> while_stmt .)
    }               reduce using rule 9 (statement -> while_stmt .)


state 10

    (10) statement -> until_stmt .

    NEWLINE         reduce using rule 10 (statement -> until_stmt .)
    $end            reduce using rule 10 (statement -> until_stmt .)
    ]               reduce using rule 10 (statement -> until_stmt .)
    }               reduce using rule 10 (statement -> until_stmt .)


state 11

    (11) statement -> expression_stmt .

    NEWLINE         reduce using rule 11 (statement -> expression_stmt .)
    $end            reduce using rule 11 (statement -> expression_stmt .)
    ]               reduce using rule 11 (statement -> expression_stmt .)
    }               reduce using rule 11 (statement -> expression_stmt .)


state 12

    (12) if_stmt -> IF . expression block
    (13) if_stmt -> IF . expression block ELSE block
    (14) if_stmt -> IF . expression block ELSE if_stmt
    (23) expression -> . expression OP_UNARY
    (24) expression -> . ! expression
    (25) expression -> . expression OP_MUL expression
    (26) expression -> . expression OP_ADD expression
    (27) expression -> . expression OP_RELA expression
    (28) expression -> . expression OP_COMP expression
    (29) expression -> . expression AND_LOGIC expression
    (30) expression -> . expression OR_LOGIC expression
    (31) expression -> . expression OP_ASSIGN expression
    (32) expression -> . ( expression )
    (33) expression -> . NUMBER
    (34) expression -> . TRUE
    (35) expression -> . FALSE
    (36) expression -> . id
    (37) expression -> . call
    (38) id -> . IDENTIFIER
    (39) id -> . IDENTIFIER . id
    (40) call -> . id ( )
    (41) call -> . id ( parameters )

    !               shift and go to state 19
    (               shift and go to state 20
    NUMBER          shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    IDENTIFIER      shift and go to state 18

    expression                     shift and go to state 28
    id                             shift and go to state 29
    call                           shift and go to state 24

state 13

    (19) expression_stmt -> expression .
    (23) expression -> expression . OP_UNARY
    (25) expression -> expression . OP_MUL expression
    (26) expression -> expression . OP_ADD expression
    (27) expression -> expression . OP_RELA expression
    (28) expression -> expression . OP_COMP expression
    (29) expression -> expression . AND_LOGIC expression
    (30) expression -> expression . OR_LOGIC expression
    (31) expression -> expression . OP_ASSIGN expression

    NEWLINE         reduce using rule 19 (expression_stmt -> expression .)
    $end            reduce using rule 19 (expression_stmt -> expression .)
    ]               reduce using rule 19 (expression_stmt -> expression .)
    }               reduce using rule 19 (expression_stmt -> expression .)
    OP_UNARY        shift and go to state 30
    OP_MUL          shift and go to state 31
    OP_ADD          shift and go to state 32
    OP_RELA         shift and go to state 33
    OP_COMP         shift and go to state 34
    AND_LOGIC       shift and go to state 35
    OR_LOGIC        shift and go to state 36
    OP_ASSIGN       shift and go to state 37


state 14

    (15) for_stmt -> FOR . expression , expression , expression block
    (23) expression -> . expression OP_UNARY
    (24) expression -> . ! expression
    (25) expression -> . expression OP_MUL expression
    (26) expression -> . expression OP_ADD expression
    (27) expression -> . expression OP_RELA expression
    (28) expression -> . expression OP_COMP expression
    (29) expression -> . expression AND_LOGIC expression
    (30) expression -> . expression OR_LOGIC expression
    (31) expression -> . expression OP_ASSIGN expression
    (32) expression -> . ( expression )
    (33) expression -> . NUMBER
    (34) expression -> . TRUE
    (35) expression -> . FALSE
    (36) expression -> . id
    (37) expression -> . call
    (38) id -> . IDENTIFIER
    (39) id -> . IDENTIFIER . id
    (40) call -> . id ( )
    (41) call -> . id ( parameters )

    !               shift and go to state 19
    (               shift and go to state 20
    NUMBER          shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    IDENTIFIER      shift and go to state 18

    expression                     shift and go to state 38
    id                             shift and go to state 29
    call                           shift and go to state 24

state 15

    (16) foreach_stmt -> id . [ nl statement_list ]
    (36) expression -> id .
    (40) call -> id . ( )
    (41) call -> id . ( parameters )

    [               shift and go to state 39
    OP_UNARY        reduce using rule 36 (expression -> id .)
    OP_MUL          reduce using rule 36 (expression -> id .)
    OP_ADD          reduce using rule 36 (expression -> id .)
    OP_RELA         reduce using rule 36 (expression -> id .)
    OP_COMP         reduce using rule 36 (expression -> id .)
    AND_LOGIC       reduce using rule 36 (expression -> id .)
    OR_LOGIC        reduce using rule 36 (expression -> id .)
    OP_ASSIGN       reduce using rule 36 (expression -> id .)
    NEWLINE         reduce using rule 36 (expression -> id .)
    $end            reduce using rule 36 (expression -> id .)
    ]               reduce using rule 36 (expression -> id .)
    }               reduce using rule 36 (expression -> id .)
    (               shift and go to state 40


state 16

    (17) while_stmt -> WHILE . expression block
    (23) expression -> . expression OP_UNARY
    (24) expression -> . ! expression
    (25) expression -> . expression OP_MUL expression
    (26) expression -> . expression OP_ADD expression
    (27) expression -> . expression OP_RELA expression
    (28) expression -> . expression OP_COMP expression
    (29) expression -> . expression AND_LOGIC expression
    (30) expression -> . expression OR_LOGIC expression
    (31) expression -> . expression OP_ASSIGN expression
    (32) expression -> . ( expression )
    (33) expression -> . NUMBER
    (34) expression -> . TRUE
    (35) expression -> . FALSE
    (36) expression -> . id
    (37) expression -> . call
    (38) id -> . IDENTIFIER
    (39) id -> . IDENTIFIER . id
    (40) call -> . id ( )
    (41) call -> . id ( parameters )

    !               shift and go to state 19
    (               shift and go to state 20
    NUMBER          shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    IDENTIFIER      shift and go to state 18

    expression                     shift and go to state 41
    id                             shift and go to state 29
    call                           shift and go to state 24

state 17

    (18) until_stmt -> UNTIL . expression block
    (23) expression -> . expression OP_UNARY
    (24) expression -> . ! expression
    (25) expression -> . expression OP_MUL expression
    (26) expression -> . expression OP_ADD expression
    (27) expression -> . expression OP_RELA expression
    (28) expression -> . expression OP_COMP expression
    (29) expression -> . expression AND_LOGIC expression
    (30) expression -> . expression OR_LOGIC expression
    (31) expression -> . expression OP_ASSIGN expression
    (32) expression -> . ( expression )
    (33) expression -> . NUMBER
    (34) expression -> . TRUE
    (35) expression -> . FALSE
    (36) expression -> . id
    (37) expression -> . call
    (38) id -> . IDENTIFIER
    (39) id -> . IDENTIFIER . id
    (40) call -> . id ( )
    (41) call -> . id ( parameters )

    !               shift and go to state 19
    (               shift and go to state 20
    NUMBER          shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    IDENTIFIER      shift and go to state 18

    expression                     shift and go to state 42
    id                             shift and go to state 29
    call                           shift and go to state 24

state 18

    (38) id -> IDENTIFIER .
    (39) id -> IDENTIFIER . . id

    [               reduce using rule 38 (id -> IDENTIFIER .)
    (               reduce using rule 38 (id -> IDENTIFIER .)
    OP_UNARY        reduce using rule 38 (id -> IDENTIFIER .)
    OP_MUL          reduce using rule 38 (id -> IDENTIFIER .)
    OP_ADD          reduce using rule 38 (id -> IDENTIFIER .)
    OP_RELA         reduce using rule 38 (id -> IDENTIFIER .)
    OP_COMP         reduce using rule 38 (id -> IDENTIFIER .)
    AND_LOGIC       reduce using rule 38 (id -> IDENTIFIER .)
    OR_LOGIC        reduce using rule 38 (id -> IDENTIFIER .)
    OP_ASSIGN       reduce using rule 38 (id -> IDENTIFIER .)
    NEWLINE         reduce using rule 38 (id -> IDENTIFIER .)
    $end            reduce using rule 38 (id -> IDENTIFIER .)
    {               reduce using rule 38 (id -> IDENTIFIER .)
    ,               reduce using rule 38 (id -> IDENTIFIER .)
    )               reduce using rule 38 (id -> IDENTIFIER .)
    ]               reduce using rule 38 (id -> IDENTIFIER .)
    }               reduce using rule 38 (id -> IDENTIFIER .)
    .               shift and go to state 43


state 19

    (24) expression -> ! . expression
    (23) expression -> . expression OP_UNARY
    (24) expression -> . ! expression
    (25) expression -> . expression OP_MUL expression
    (26) expression -> . expression OP_ADD expression
    (27) expression -> . expression OP_RELA expression
    (28) expression -> . expression OP_COMP expression
    (29) expression -> . expression AND_LOGIC expression
    (30) expression -> . expression OR_LOGIC expression
    (31) expression -> . expression OP_ASSIGN expression
    (32) expression -> . ( expression )
    (33) expression -> . NUMBER
    (34) expression -> . TRUE
    (35) expression -> . FALSE
    (36) expression -> . id
    (37) expression -> . call
    (38) id -> . IDENTIFIER
    (39) id -> . IDENTIFIER . id
    (40) call -> . id ( )
    (41) call -> . id ( parameters )

    !               shift and go to state 19
    (               shift and go to state 20
    NUMBER          shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    IDENTIFIER      shift and go to state 18

    expression                     shift and go to state 44
    id                             shift and go to state 29
    call                           shift and go to state 24

state 20

    (32) expression -> ( . expression )
    (23) expression -> . expression OP_UNARY
    (24) expression -> . ! expression
    (25) expression -> . expression OP_MUL expression
    (26) expression -> . expression OP_ADD expression
    (27) expression -> . expression OP_RELA expression
    (28) expression -> . expression OP_COMP expression
    (29) expression -> . expression AND_LOGIC expression
    (30) expression -> . expression OR_LOGIC expression
    (31) expression -> . expression OP_ASSIGN expression
    (32) expression -> . ( expression )
    (33) expression -> . NUMBER
    (34) expression -> . TRUE
    (35) expression -> . FALSE
    (36) expression -> . id
    (37) expression -> . call
    (38) id -> . IDENTIFIER
    (39) id -> . IDENTIFIER . id
    (40) call -> . id ( )
    (41) call -> . id ( parameters )

    !               shift and go to state 19
    (               shift and go to state 20
    NUMBER          shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    IDENTIFIER      shift and go to state 18

    expression                     shift and go to state 45
    id                             shift and go to state 29
    call                           shift and go to state 24

state 21

    (33) expression -> NUMBER .

    OP_UNARY        reduce using rule 33 (expression -> NUMBER .)
    OP_MUL          reduce using rule 33 (expression -> NUMBER .)
    OP_ADD          reduce using rule 33 (expression -> NUMBER .)
    OP_RELA         reduce using rule 33 (expression -> NUMBER .)
    OP_COMP         reduce using rule 33 (expression -> NUMBER .)
    AND_LOGIC       reduce using rule 33 (expression -> NUMBER .)
    OR_LOGIC        reduce using rule 33 (expression -> NUMBER .)
    OP_ASSIGN       reduce using rule 33 (expression -> NUMBER .)
    NEWLINE         reduce using rule 33 (expression -> NUMBER .)
    $end            reduce using rule 33 (expression -> NUMBER .)
    {               reduce using rule 33 (expression -> NUMBER .)
    ,               reduce using rule 33 (expression -> NUMBER .)
    )               reduce using rule 33 (expression -> NUMBER .)
    ]               reduce using rule 33 (expression -> NUMBER .)
    }               reduce using rule 33 (expression -> NUMBER .)


state 22

    (34) expression -> TRUE .

    OP_UNARY        reduce using rule 34 (expression -> TRUE .)
    OP_MUL          reduce using rule 34 (expression -> TRUE .)
    OP_ADD          reduce using rule 34 (expression -> TRUE .)
    OP_RELA         reduce using rule 34 (expression -> TRUE .)
    OP_COMP         reduce using rule 34 (expression -> TRUE .)
    AND_LOGIC       reduce using rule 34 (expression -> TRUE .)
    OR_LOGIC        reduce using rule 34 (expression -> TRUE .)
    OP_ASSIGN       reduce using rule 34 (expression -> TRUE .)
    NEWLINE         reduce using rule 34 (expression -> TRUE .)
    $end            reduce using rule 34 (expression -> TRUE .)
    {               reduce using rule 34 (expression -> TRUE .)
    ,               reduce using rule 34 (expression -> TRUE .)
    )               reduce using rule 34 (expression -> TRUE .)
    ]               reduce using rule 34 (expression -> TRUE .)
    }               reduce using rule 34 (expression -> TRUE .)


state 23

    (35) expression -> FALSE .

    OP_UNARY        reduce using rule 35 (expression -> FALSE .)
    OP_MUL          reduce using rule 35 (expression -> FALSE .)
    OP_ADD          reduce using rule 35 (expression -> FALSE .)
    OP_RELA         reduce using rule 35 (expression -> FALSE .)
    OP_COMP         reduce using rule 35 (expression -> FALSE .)
    AND_LOGIC       reduce using rule 35 (expression -> FALSE .)
    OR_LOGIC        reduce using rule 35 (expression -> FALSE .)
    OP_ASSIGN       reduce using rule 35 (expression -> FALSE .)
    NEWLINE         reduce using rule 35 (expression -> FALSE .)
    $end            reduce using rule 35 (expression -> FALSE .)
    {               reduce using rule 35 (expression -> FALSE .)
    ,               reduce using rule 35 (expression -> FALSE .)
    )               reduce using rule 35 (expression -> FALSE .)
    ]               reduce using rule 35 (expression -> FALSE .)
    }               reduce using rule 35 (expression -> FALSE .)


state 24

    (37) expression -> call .

    OP_UNARY        reduce using rule 37 (expression -> call .)
    OP_MUL          reduce using rule 37 (expression -> call .)
    OP_ADD          reduce using rule 37 (expression -> call .)
    OP_RELA         reduce using rule 37 (expression -> call .)
    OP_COMP         reduce using rule 37 (expression -> call .)
    AND_LOGIC       reduce using rule 37 (expression -> call .)
    OR_LOGIC        reduce using rule 37 (expression -> call .)
    OP_ASSIGN       reduce using rule 37 (expression -> call .)
    NEWLINE         reduce using rule 37 (expression -> call .)
    $end            reduce using rule 37 (expression -> call .)
    {               reduce using rule 37 (expression -> call .)
    ,               reduce using rule 37 (expression -> call .)
    )               reduce using rule 37 (expression -> call .)
    ]               reduce using rule 37 (expression -> call .)
    }               reduce using rule 37 (expression -> call .)


state 25

    (2) program -> nl statement_list .

    $end            reduce using rule 2 (program -> nl statement_list .)


state 26

    (22) nl -> nl NEWLINE .

    NEWLINE         reduce using rule 22 (nl -> nl NEWLINE .)
    IF              reduce using rule 22 (nl -> nl NEWLINE .)
    FOR             reduce using rule 22 (nl -> nl NEWLINE .)
    WHILE           reduce using rule 22 (nl -> nl NEWLINE .)
    UNTIL           reduce using rule 22 (nl -> nl NEWLINE .)
    IDENTIFIER      reduce using rule 22 (nl -> nl NEWLINE .)
    !               reduce using rule 22 (nl -> nl NEWLINE .)
    (               reduce using rule 22 (nl -> nl NEWLINE .)
    NUMBER          reduce using rule 22 (nl -> nl NEWLINE .)
    TRUE            reduce using rule 22 (nl -> nl NEWLINE .)
    FALSE           reduce using rule 22 (nl -> nl NEWLINE .)
    $end            reduce using rule 22 (nl -> nl NEWLINE .)
    ]               reduce using rule 22 (nl -> nl NEWLINE .)
    }               reduce using rule 22 (nl -> nl NEWLINE .)


state 27
